--- a/src/app/medicaments/medicaments.component.html
+++ b/src/app/medicaments/medicaments.component.html
@@ -1,1 +1,74 @@
-<p>medicaments works!</p>
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col col-md-12">
+                <div class="card">
+                    <div class="card-header card-header-danger">
+                        <h4 class="card-title ">Liste des Medicaments</h4>
+                        <p class="card-category"> Ce tableau liste les medicaments pour lesquels des accès ont été paramétrés.</p>
+                    </div>
+                    <div class="card-body">
+                    <mat-form-field>
+                        <mat-label>
+                          <mat-icon>search</mat-icon> Chercher</mat-label>
+                        <input matInput (keyup)="applyFilter($event)" placeholder="Mot Clé ...">
+                    </mat-form-field>
+                    <button mat-raised-button (click)="openAddDialog()" class="btn btn-danger pull-right">Ajouter Medicament</button>
+                <div class="mat-elevation-z8">
+                    <table mat-table [dataSource]="dataSource" matSort>
+              <!-- pk Column ----------------------------------------------->
+                        <ng-container matColumnDef="pk">
+                            <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> id </th>
+                            <td mat-cell *matCellDef="let row"> {{row.pk}} </td>
+                        </ng-container>
+              <!-- libelle --------------------------------------------------->
+                        <ng-container matColumnDef="libelle">
+                            <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> libelle </th>
+                            <td mat-cell *matCellDef="let row"> {{row.libelle}} </td>
+                        </ng-container>
+               <!-- categorie --------------------------------------------------->
+                        <ng-container matColumnDef="categorie">
+                            <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> categorie </th>
+                            <td mat-cell *matCellDef="let row"> {{row.categorie}} </td>
+                        </ng-container>
+               <!-- prix --------------------------------------------------->
+                        <ng-container matColumnDef="prix">
+                                <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> prix </th>
+                                <td mat-cell *matCellDef="let row"> {{row.prix}} </td>
+                        </ng-container>         
+
+                <!-- quantite --------------------------------------------------->
+                        <ng-container matColumnDef="quantite">
+                            <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> quantite </th>
+                            <td mat-cell *matCellDef="let row"> {{row.quantite}} </td>
+                        </ng-container>        
+                 <!-- date --------------------------------------------------->
+                        <ng-container matColumnDef="date">
+                            <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> date </th>
+                            <td mat-cell *matCellDef="let row"> {{row.date}} </td>
+                        </ng-container>
+             <!-- LES ACTIONS --------------------------------------------------->
+                        <ng-container matColumnDef="Actions">
+                            <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+                            <td mat-cell *matCellDef="let row">
+                                <mat-chip-list aria-label="Fish selection" >
+                                    <button mat-raised-button selected class="btn btn-warning btn-link btn-just-icon" (click)="openModifyDialog(row)"><mat-icon>edit</mat-icon></button>
+                                        <button mat-raised-button selected class="btn btn-danger btn-link  btn-just-icon" (click)="deleteOrg(row)"><mat-icon>delete</mat-icon></button>
+                                </mat-chip-list>
+                            </td>
+                        </ng-container>
+  
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+                        </tr>
+                    </table>
+  
+                    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+                </div>
+            </div>
+                </div>
+        </div>
+    </div>
+  </div>
+  </div>
+  
