--- a/src/app/MedDialoge/mededit-dialoge/mededit-dialoge.component.html
+++ b/src/app/MedDialoge/mededit-dialoge/mededit-dialoge.component.html
@@ -8,8 +8,7 @@
   
         <div class="form">
             <mat-form-field class="example-full-width">
-                <input matInput placeholder="libelle" value="{{data.medicament.libelle}}" [(ngModel)]="data.medicament.libelle" name="libelle" required>
-                <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
+                <input matInput placeholder="libelle" value="{{data.medicament.libelle}}" [(ngModel)]="data.medicament.libelle" name="libelle">
             </mat-form-field>
         </div>
   
@@ -21,22 +20,19 @@
   
         <div class="form">
             <mat-form-field >
-                <input matInput placeholder="prix" [(ngModel)]="data.medicament.prix" value="{{data.medicament.prix}}" name="prix" email>
-                <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
+                <input matInput placeholder="prix" [(ngModel)]="data.medicament.prix" value="{{data.medicament.prix}}" name="prix">
             </mat-form-field>
         </div>
 
         <div class="form">
             <mat-form-field >
-                <input matInput placeholder="quantite" [(ngModel)]="data.medicament.quantite" value="{{data.medicament.quantite}}" name="quantite" email>
-                <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
+                <input matInput placeholder="quantite" [(ngModel)]="data.medicament.quantite" value="{{data.medicament.quantite}}" name="quantite">
             </mat-form-field>
         </div>
 
         <div class="form">
             <mat-form-field >
-                <input matInput placeholder="date" [(ngModel)]="data.medicament.date" value="{{data.medicament.date}}" name="date" email>
-                <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
+                <input matInput placeholder="date" [(ngModel)]="data.medicament.date" value="{{data.medicament.date}}" name="date">
             </mat-form-field>
         </div>
   
