--- a/src/app/medicaments/medicaments.component.html
+++ b/src/app/medicaments/medicaments.component.html
@@ -13,7 +13,7 @@
                           <mat-icon>search</mat-icon> Chercher</mat-label>
                         <input matInput (keyup)="applyFilter($event)" placeholder="Mot Clé ...">
                     </mat-form-field>
-                    <button mat-raised-button (click)="openAddDialog()" class="btn btn-danger pull-right">Ajouter Medicament</button>
+                    <button mat-raised-button (click)="openAddDialog()" class="btn btn-dark float-right">Ajouter Medicament</button>
                 <div class="mat-elevation-z8">
                     <table mat-table [dataSource]="dataSource" matSort>
               <!-- pk Column ----------------------------------------------->
@@ -35,13 +35,13 @@
                         <ng-container matColumnDef="prix">
                                 <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> prix </th>
                                 <td mat-cell *matCellDef="let row"> {{row.prix}} </td>
-                        </ng-container>         
+                        </ng-container>
 
                 <!-- quantite --------------------------------------------------->
                         <ng-container matColumnDef="quantite">
                             <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> quantite </th>
                             <td mat-cell *matCellDef="let row"> {{row.quantite}} </td>
-                        </ng-container>        
+                        </ng-container>
                  <!-- date --------------------------------------------------->
                         <ng-container matColumnDef="date">
                             <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> date </th>
@@ -52,17 +52,17 @@
                             <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
                             <td mat-cell *matCellDef="let row">
                                 <mat-chip-list aria-label="Fish selection" >
-                                    <button mat-raised-button selected class="btn btn-warning btn-link btn-just-icon" (click)="openModifyDialog(row)"><mat-icon>edit</mat-icon></button>
-                                        <button mat-raised-button selected class="btn btn-danger btn-link  btn-just-icon" (click)="deleteOrg(row)"><mat-icon>delete</mat-icon></button>
+                                    <button mat-raised-button class="btn btn-warning btn-just-icon" (click)="openModifyDialog(row)"><mat-icon>edit</mat-icon></button>
+                                        <button mat-raised-button class="btn btn-danger  btn-just-icon" (click)="deleteOrg(row)"><mat-icon>delete</mat-icon></button>
                                 </mat-chip-list>
                             </td>
                         </ng-container>
-  
+
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;">
                         </tr>
                     </table>
-  
+
                     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
                 </div>
             </div>
@@ -71,4 +71,3 @@
     </div>
   </div>
   </div>
-  
