--- a/src/app/fournisseurs/fournisseurs.component.html
+++ b/src/app/fournisseurs/fournisseurs.component.html
@@ -1,1 +1,70 @@
-<p>fournisseurs works!</p>
+<div class="main-content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col col-md-12 mt-md-5">
+        <div class="card">
+          <div class="card-header card-header-danger">
+            <h4 class="card-title ">Liste des Fournisseurs</h4>
+            <p class="card-category"> Ce tableau liste les fournisseurs pour lesquels des accès ont été paramétrés.</p>
+          </div>
+          <div class="card-body">
+            <mat-form-field>
+              <mat-label>
+                <mat-icon>search</mat-icon>
+                Chercher
+              </mat-label>
+              <input matInput (keyup)="applyFilter($event)" placeholder="Mot Clé ...">
+            </mat-form-field>
+            <button mat-raised-button (click)="openAddDialog()" class="btn btn-dark float-right">Ajouter Fournissuer
+            </button>
+            <div class="mat-elevation-z8">
+              <table mat-table [dataSource]="dataSource" matSort>
+                <!-- libelle --------------------------------------------------->
+                <ng-container matColumnDef="nom">
+                  <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> Nom</th>
+                  <td mat-cell *matCellDef="let row"> {{row.nom}} </td>
+                </ng-container>
+                <!-- categorie --------------------------------------------------->
+                <ng-container matColumnDef="email">
+                  <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> Email</th>
+                  <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+                </ng-container>
+                <!-- prix --------------------------------------------------->
+                <ng-container matColumnDef="adresse">
+                  <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> Adresse</th>
+                  <td mat-cell *matCellDef="let row"> {{row.adresse}} </td>
+                </ng-container>
+
+                <!-- quantite --------------------------------------------------->
+                <ng-container matColumnDef="telephone">
+                  <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header>Telephone</th>
+                  <td mat-cell *matCellDef="let row"> {{row.telephone}} </td>
+                </ng-container>
+                <!-- LES ACTIONS --------------------------------------------------->
+                <ng-container matColumnDef="Actions">
+                  <th class="text-primary" mat-header-cell *matHeaderCellDef mat-sort-header> Actions</th>
+                  <td mat-cell *matCellDef="let row">
+                    <mat-chip-list aria-label="Fish selection">
+                      <button class="btn btn-warning m-2 btn-sm" (click)="openModifyDialog(row)">
+                        <mat-icon>edit</mat-icon>
+                      </button>
+                      <button class="btn btn-danger m-2 btn-sm" (click)="deleteOrg(row)">
+                        <mat-icon>delete</mat-icon>
+                      </button>
+                    </mat-chip-list>
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+                </tr>
+              </table>
+
+              <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
