--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 table {
   width: 100%;
 }
+.mat-icon {
+  font-size: 20px;
+}
+.btn{
+  border-radius: 20px;
+}
