--- a/src/app/fournisseurs/edit-fournisseur/edit-fournisseur.component.html
+++ b/src/app/fournisseurs/edit-fournisseur/edit-fournisseur.component.html
@@ -19,14 +19,14 @@
     </div>
 
     <div class="form">
-      <mat-form-field>
+      <mat-form-field class="example-full-width">
         <input matInput placeholder="adresse" [(ngModel)]="data.fournisseur.adresse" value="{{data.fournisseur.adresse}}"
                name="adresse">
       </mat-form-field>
     </div>
 
     <div class="form">
-      <mat-form-field>
+      <mat-form-field class="example-full-width">
         <input matInput placeholder="telephone" [(ngModel)]="data.fournisseur.telephone"
                value="{{data.fournisseur.telephone}}" name="telephone">
       </mat-form-field>
